fixing spacing for info page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -180,6 +180,15 @@ img.info {
   margin: .5rem;
 }
 
+div.info-badges {
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: center;
+}
+
 /* ---- Register Stylings ---- */
 
 h2.signupTitle {
@@ -241,7 +250,7 @@ div.box {
   margin-top: 2rem;
   max-width: 700px;
   border-radius: 8px;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
   padding: 32px;
   display: flex;
   flex-direction: column;
@@ -390,12 +399,15 @@ div.journal-box {
 }
 
 div.journal-entry, div.resource-article {
-  max-width: 375px;
   min-height: 225px;
   background-color: rgb(58, 87, 114, 0.5);
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+div.journal-entry {
+  width: 400px;
 }
 
 div.resource-article {
@@ -522,18 +534,24 @@ div.badges-col {
 }
 
 img.earned-badge {
-  max-width: calc(35px + 4.2vw);
+  width: calc(35px + 4.2vw);
+  height: calc(35px + 4.2vw);
 }
 
 label.infoBadge {
   display: flex;
   flex-direction: column;
   align-items: center;
+  margin: 0;
 }
 
 img.about {
   display: flex;
   max-width: calc(5vw);
+}
+
+p.about-info {
+  margin-bottom: 5px;
 }
 
 /*  For days/etc until next badge */
@@ -685,6 +703,9 @@ label>span.submit-optional-span {
   }
   div.checkin-box {
     margin-bottom: 2rem;
+  }
+  div.journal-entry {
+    width: 300px;
   }
 }
 
